# SnowLangSQL

./: .env.sample  Makefile  README.md  app.py  cli.py  pyproject.toml  requirements.txt
src/snowlangsql/: agent.py  config.py  entities.py  hello.py  st_callable_util.py  tools.py  util.py  workflow.py
src/snowlangsql/repository/: snowflake.py
tests/: test_hello.py  test_snowflake.py  test_tools.py
