[project]
name = "snowlangsql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.2",
    "langchain-openai>=0.2.2",
    "langgraph>=0.2.35",
    "mypy>=1.11.2",
    "pydotenv>=0.0.7",
    "ruff>=0.6.9",
    "snowflake-connector-python[secure-local-storage]>=3.12.2",
    "snowflake-sqlalchemy>=1.6.1",
    "sqlalchemy>=2.0.35",
]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.3.3",
]

[project.scripts]
snowlangsql = "snowlangsql:hello"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]
target-version = "py312"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["SIM108"]
